add_subdirectory(QCtmIPAddressEdit)
add_subdirectory(QCtmSwitchButton)
add_subdirectory(QCtmCircleProgressBar)
add_subdirectory(QCtmWindow)
add_subdirectory(QCtmDialog)
add_subdirectory(QCtmStageProgressBar)
add_subdirectory(QCtmEditLabel)
add_subdirectory(QCtmDrawerWidget)
add_subdirectory(QCtmToolBox)
add_subdirectory(QCtmLoadingDialog)
